// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils - questions entityPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select an entity",
    "selectType": "dynamic",
  },
  "message": "entity",
  "name": "buildingBlockData.metaPath.entitySet",
  "type": "list",
}
`;

exports[`utils - questions entityPrompt 2`] = `
Array [
  Object {
    "name": "C_CustomerBankDetailsOPType",
    "value": "C_CUSTOMER_OP_SRV.C_CustomerBankDetailsOPType",
  },
  Object {
    "name": "C_CustomerCompanyCodeOPType",
    "value": "C_CUSTOMER_OP_SRV.C_CustomerCompanyCodeOPType",
  },
  Object {
    "name": "C_CustomerOPType",
    "value": "C_CUSTOMER_OP_SRV.C_CustomerOPType",
  },
  Object {
    "name": "C_CustomerSalesAreaOPType",
    "value": "C_CUSTOMER_OP_SRV.C_CustomerSalesAreaOPType",
  },
  Object {
    "name": "C_CustrecnclnacctvhtempType",
    "value": "C_CUSTOMER_OP_SRV.C_CustrecnclnacctvhtempType",
  },
  Object {
    "name": "C_OrderIsBlockedTextVHTempType",
    "value": "C_CUSTOMER_OP_SRV.C_OrderIsBlockedTextVHTempType",
  },
  Object {
    "name": "I_AccountingClerkStdVHType",
    "value": "C_CUSTOMER_OP_SRV.I_AccountingClerkStdVHType",
  },
  Object {
    "name": "I_AccountingClerkType",
    "value": "C_CUSTOMER_OP_SRV.I_AccountingClerkType",
  },
  Object {
    "name": "I_BillingBlockReasonType",
    "value": "C_CUSTOMER_OP_SRV.I_BillingBlockReasonType",
  },
  Object {
    "name": "I_BusinessPartnerVHType",
    "value": "C_CUSTOMER_OP_SRV.I_BusinessPartnerVHType",
  },
  Object {
    "name": "I_ChartOfAccountsStdVHType",
    "value": "C_CUSTOMER_OP_SRV.I_ChartOfAccountsStdVHType",
  },
  Object {
    "name": "I_CompanyCodeStdVHType",
    "value": "C_CUSTOMER_OP_SRV.I_CompanyCodeStdVHType",
  },
  Object {
    "name": "I_CompanyCodeType",
    "value": "C_CUSTOMER_OP_SRV.I_CompanyCodeType",
  },
  Object {
    "name": "I_ContactPersonDepartmentTType",
    "value": "C_CUSTOMER_OP_SRV.I_ContactPersonDepartmentTType",
  },
  Object {
    "name": "I_ContactPersonFunctionTType",
    "value": "C_CUSTOMER_OP_SRV.I_ContactPersonFunctionTType",
  },
  Object {
    "name": "I_ControllingAreaStdVHType",
    "value": "C_CUSTOMER_OP_SRV.I_ControllingAreaStdVHType",
  },
  Object {
    "name": "I_CountryType",
    "value": "C_CUSTOMER_OP_SRV.I_CountryType",
  },
  Object {
    "name": "I_CreditControlAreaStdVHType",
    "value": "C_CUSTOMER_OP_SRV.I_CreditControlAreaStdVHType",
  },
  Object {
    "name": "I_Customer_to_BusinessPartnerType",
    "value": "C_CUSTOMER_OP_SRV.I_Customer_to_BusinessPartnerType",
  },
  Object {
    "name": "I_Customer_VHType",
    "value": "C_CUSTOMER_OP_SRV.I_Customer_VHType",
  },
  Object {
    "name": "I_CustomerContactOPType",
    "value": "C_CUSTOMER_OP_SRV.I_CustomerContactOPType",
  },
  Object {
    "name": "I_CustomerDunningType",
    "value": "C_CUSTOMER_OP_SRV.I_CustomerDunningType",
  },
  Object {
    "name": "I_CustomerGroupType",
    "value": "C_CUSTOMER_OP_SRV.I_CustomerGroupType",
  },
  Object {
    "name": "I_DeliveryBlockReasonType",
    "value": "C_CUSTOMER_OP_SRV.I_DeliveryBlockReasonType",
  },
  Object {
    "name": "I_DistributionChannelType",
    "value": "C_CUSTOMER_OP_SRV.I_DistributionChannelType",
  },
  Object {
    "name": "I_DivisionType",
    "value": "C_CUSTOMER_OP_SRV.I_DivisionType",
  },
  Object {
    "name": "I_PaymentBlockingReasonType",
    "value": "C_CUSTOMER_OP_SRV.I_PaymentBlockingReasonType",
  },
  Object {
    "name": "I_SalesGroupType",
    "value": "C_CUSTOMER_OP_SRV.I_SalesGroupType",
  },
  Object {
    "name": "I_SalesOfficeType",
    "value": "C_CUSTOMER_OP_SRV.I_SalesOfficeType",
  },
  Object {
    "name": "I_SalesOrganizationType",
    "value": "C_CUSTOMER_OP_SRV.I_SalesOrganizationType",
  },
]
`;

exports[`utils - questions getAggregationPathPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select an aggregation path",
    "selectType": "dynamic",
  },
  "message": "AggregationPathMessage",
  "name": "aggregationPath",
  "type": "list",
}
`;

exports[`utils - questions getAggregationPathPrompt 2`] = `
Array [
  Object {
    "name": "/mvc:View",
    "value": "/mvc:View",
  },
  Object {
    "name": "/mvc:View/Page",
    "value": "/mvc:View/*[local-name()='Page']",
  },
  Object {
    "name": "/mvc:View/Page/content",
    "value": "/mvc:View/*[local-name()='Page']/*[local-name()='content']",
  },
]
`;

exports[`utils - questions getAggregationPathPrompt 3`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select an aggregation path",
    "selectType": "dynamic",
  },
  "name": "aggregationPath",
  "type": "list",
}
`;

exports[`utils - questions getAnnotationPathQualifierPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "selectType": "dynamic",
  },
  "message": "testMessage",
  "name": "buildingBlockData.metaPath.qualifier",
  "type": "list",
}
`;

exports[`utils - questions getAnnotationPathQualifierPrompt 2`] = `
Array [
  Object {
    "name": "@UI.LineItem",
    "value": "@com.sap.vocabularies.UI.v1.LineItem",
  },
]
`;

exports[`utils - questions getAnnotationPathQualifierPrompt 3`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "selectType": "dynamic",
  },
  "name": "buildingBlockData.metaPath.qualifier",
  "type": "list",
}
`;

exports[`utils - questions getBindingContextType 1`] = `
Object {
  "choices": Array [
    Object {
      "name": "Relative",
      "value": "relative",
    },
    Object {
      "name": "Absolute",
      "value": "absolute",
    },
  ],
  "guiOptions": Object {
    "dependantPromptNames": Array [
      "buildingBlockData.metaPath.qualifier",
    ],
    "selectType": "static",
  },
  "message": "bindingContext",
  "name": "buildingBlockData.metaPath.bindingContextType",
  "type": "list",
}
`;

exports[`utils - questions getBindingContextType 2`] = `
Object {
  "choices": Array [
    Object {
      "name": "Relative",
      "value": "relative",
    },
    Object {
      "name": "Absolute",
      "value": "absolute",
    },
  ],
  "guiOptions": Object {
    "selectType": "static",
  },
  "name": "buildingBlockData.metaPath.bindingContextType",
  "type": "list",
}
`;

exports[`utils - questions getViewOrFragmentPathPrompt 1`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "dependantPromptNames": Array [
      "aggregationPath",
    ],
    "placeholder": "Select a view or fragment file",
    "selectType": "dynamic",
  },
  "message": "testMessage",
  "name": "viewOrFragmentPath",
  "type": "list",
  "validate": [Function],
}
`;

exports[`utils - questions getViewOrFragmentPathPrompt 2`] = `
Object {
  "choices": [Function],
  "guiOptions": Object {
    "placeholder": "Select a view or fragment file",
    "selectType": "dynamic",
  },
  "name": "viewOrFragmentPath",
  "type": "list",
  "validate": [Function],
}
`;
